Switch public directory to docs so Github pages can work

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "http-server ./public -c-1 -o",
+    "serve": "http-server ./docs -c-1 -o",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
